# SCCN_SCE

./: CMakeLists.txt  Clustering_Classification.cpp  Clustering_Classification.h  HSV.cpp  HSV.h  Morphology.h  Readme.txt  RectangleTest.h  SmoothingGapfilling.h  StatisticalFunctions.cpp  StatisticalFunctions.h  StrokeWidth.cpp  StrokeWidth.h  connectedcomponent.cpp  connectedcomponent.h  docclustering_svm.cpp  sorting.h
